test/neg/dep.scala
object Test {
  abstract class C {
    type t;
  }
  def foo(x: C, y: x.t): Object = null;
}